@@ -12,6 +12,7 @@ from rcsb.utils.io.FileUtil import FileUtil
 from rcsb.utils.io.IoUtil import IoUtil
 from rcsb.utils.io.MarshalUtil import MarshalUtil
 from rcsb.utils.io.SingletonClass import SingletonClass
+from rcsb.utils.io.StashUtil import StashUtil
 
 logger = logging.getLogger(__name__)
 
@@ -19,17 +20,17 @@ logger = logging.getLogger(__name__)
 class UniProtIdMappingProvider(SingletonClass):
     """Manage index of UniProt identifier mappings."""
 
-    def __init__(self, **kwargs):
-        # urlTarget = kwargs.get("urlTarget", "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/idmapping/idmapping.dat.gz")
-        urlTarget = kwargs.get("urlTarget", "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/idmapping/idmapping_selected.tab.gz")
-        urlTargetLegacy = kwargs.get("urlTargetLegacy", "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/idmapping/idmapping_selected.tab.2015_03.gz")
-        cachePath = kwargs.get("cachePath", ".")
-        dirPath = os.path.join(cachePath, "uniprot-id-mapping")
-        useCache = kwargs.get("useCache", True)
-        mapNameL = kwargs.get("mapNames", ["NCBI-taxon"])
-        fmt = kwargs.get("fmt", "pickle")
-        maxLimit = kwargs.get("maxLimit", None)
-        useLegacy = kwargs.get("useLegacy", False)
+    def __init__(self, cachePath, **kwargs):
+        #
+        self.__cachePath = cachePath
+        self.__dirName = "uniprot-id-mapping"
+        self.__kwargs = kwargs
+        self.__nameL = []
+        self.__mapD = {}
+        self.__cacheFieldD = {}
+        self.__nameLegacyL = []
+        self.__mapLegacyD = {}
+        self.__cacheFieldLegacyD = {}
         #
         self.__mapRecordD = {
             "UniProtKB-AC": 1,
@@ -55,17 +56,52 @@ class UniProtIdMappingProvider(SingletonClass):
             "Ensembl_PRO": 21,
             "Additional PubMed": 22,
         }
-        self.__mU = MarshalUtil(workPath=dirPath)
-        self.__nameL, self.__mapD = self.__rebuildCache(urlTarget, mapNameL, dirPath, fmt=fmt, useCache=useCache, maxLimit=maxLimit)
-        self.__cacheFieldD = {k: ii for ii, k in enumerate(self.__nameL)}
-        #
-        if useLegacy:
-            self.__nameLegacyL, self.__mapLegacyD = self.__rebuildCache(urlTargetLegacy, mapNameL, dirPath, fmt=fmt, useCache=useCache, maxLimit=maxLimit)
-            self.__cacheFieldLegacyD = {k: ii for ii, k in enumerate(self.__nameLegacyL)}
-        else:
+
+    def clearCache(self):
+        try:
+            self.__nameL = []
+            self.__mapD = {}
+            self.__cacheFieldD = {}
             self.__nameLegacyL = []
             self.__mapLegacyD = {}
             self.__cacheFieldLegacyD = {}
+            dirPath = os.path.join(self.__cachePath, self.__dirName)
+            fU = FileUtil()
+            return fU.remove(dirPath)
+        except Exception:
+            pass
+        return False
+
+    def clearRawCache(self):
+        try:
+            rawDirPath = os.path.join(self.__cachePath, self.__dirName + "-raw")
+            fU = FileUtil()
+            return fU.remove(rawDirPath)
+        except Exception:
+            pass
+        return False
+
+    def reload(self, useCache=True, useLegacy=False, fmt="tdd", **kwargs):
+        # full data set url -
+        # urlTarget = kwargs.get("urlTarget", "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/idmapping/idmapping.dat.gz")
+        ok = True
+        urlTarget = kwargs.get("urlTarget", "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/idmapping/idmapping_selected.tab.gz")
+        urlTargetLegacy = kwargs.get("urlTargetLegacy", "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/idmapping/idmapping_selected.tab.2015_03.gz")
+        mapNameL = kwargs.get("mapNames", ["NCBI-taxon"])
+        #
+        dirPath = os.path.join(self.__cachePath, self.__dirName)
+        rawDirPath = os.path.join(self.__cachePath, self.__dirName + "-raw")
+        #
+        if useLegacy and not (self.__mapLegacyD and len(self.__mapLegacyD) > 1000):
+            logger.info("Reloading legacy mapping data (%r) from %r", useLegacy, urlTargetLegacy)
+            self.__nameLegacyL, self.__mapLegacyD = self.__rebuildCache(urlTargetLegacy, mapNameL, dirPath, rawDirPath, fmt=fmt, useCache=useCache)
+            self.__cacheFieldLegacyD = {k: ii for ii, k in enumerate(self.__nameLegacyL)}
+            ok = self.__mapLegacyD and len(self.__mapLegacyD) > 1000
+        elif not (self.__mapD and len(self.__mapD) > 1000):
+            self.__nameL, self.__mapD = self.__rebuildCache(urlTarget, mapNameL, dirPath, rawDirPath, fmt=fmt, useCache=useCache)
+            self.__cacheFieldD = {k: ii for ii, k in enumerate(self.__nameL)}
+            ok = self.__mapD and len(self.__mapD) > 1000
+        return ok
 
     def getMappedId(self, unpId, mapName="NCBI-taxon"):
         mId = None
@@ -92,20 +128,19 @@ class UniProtIdMappingProvider(SingletonClass):
         return mId
 
     def testCache(self):
-        logger.info("Length UniProt mapping for %r %d", self.__nameL, len(self.__mapD))
-        return len(self.__mapD) > 1000
+        logger.info("Length of UniProt ID mapping for %r %d", self.__nameL, len(self.__mapD))
+        return (len(self.__mapD) > 1000) and (len(self.__nameL) >= 1)
 
-    def __rebuildCache(self, targetUrl, mapNameL, outDirPath, fmt="pickle", useCache=True, maxLimit=None):
+    def __rebuildCache(self, targetUrl, mapNameL, outDirPath, rawDirPath, fmt="pickle", useCache=True):
         """Fetch the UniProt selected id mapping resource file and extract
         UniProt Acc to  'mapIndex' mapping. Serialize the mapping as required.
 
         Args:
-            mapIndex (int): index in the tab delimited mapping file (below)
+            targetUrl (str): source URL of the remote index file
+            mapNameL (list): list of key mapping names to extract from the index
             outDirPath (str): directory path for raw and processed mapping files
-            mapFileName (str): file name for the target mapping file
             fmt (str, optional): output format (pickle|json) . Defaults to "pickle".
             useCache (bool, optional): use cached files. Defaults to True.
-            maxLimit (int, optional): maximum number of records to process (default=None)
 
         Returns:
             dict: od[uniprotId] = mapped value
@@ -148,7 +183,7 @@ class UniProtIdMappingProvider(SingletonClass):
             idMapPath = os.path.join(outDirPath, mapFileName)
             mU = MarshalUtil()
             if useCache and mU.exists(idMapPath):
-                logger.info("Using cached file %r", idMapPath)
+                logger.info("Reading cached serialized file %r", idMapPath)
                 if fmt in ["pickle", "json"]:
                     tD = mU.doImport(idMapPath, fmt=fmt)
                     nL = list(set(tD["idNameList"]))
@@ -169,9 +204,9 @@ class UniProtIdMappingProvider(SingletonClass):
                             oD[row[0]] = row[1:]
                     ok = True
             else:
-                idPath = os.path.join(outDirPath, fileU.getFileName(targetUrl))
+                idPath = os.path.join(rawDirPath, fileU.getFileName(targetUrl))
                 if not fileU.exists(idPath):
-                    logger.info("Fetch selected idmapping data from %r in %r", targetUrl, outDirPath)
+                    logger.info("Fetching selected UniProt idmapping data from %r in %r", targetUrl, outDirPath)
                     ok = fileU.get(targetUrl, idPath)
                     if not ok:
                         logger.error("Failed to downlowd %r", targetUrl)
@@ -181,51 +216,120 @@ class UniProtIdMappingProvider(SingletonClass):
                 # ---
                 ioU = IoUtil()
                 if fmt in ["pickle", "json"]:
-                    iCount = 0
                     if len(mapNameL) == 1:
                         for row in ioU.deserializeCsvIter(idPath, delimiter="\t", rowFormat="list", encodingErrors="ignore"):
                             oD[row[0]] = str(row[self.__mapRecordD[mapNameL[0]] - 1])
-                            iCount += 1
-                            if maxLimit and iCount > maxLimit:
-                                break
                     else:
                         for row in ioU.deserializeCsvIter(idPath, delimiter="\t", rowFormat="list", encodingErrors="ignore"):
                             for mapName in mapNameL:
                                 oD.setdefault(row[0], []).append(str(row[self.__mapRecordD[mapName] - 1]))
-                            iCount += 1
-                            if maxLimit and iCount > maxLimit:
-                                break
+                    logger.info("Writing serialized mapping file %r", idMapPath)
                     ok = mU.doExport(idMapPath, {"idNameList": mapNameL, "uniprotMapD": oD}, fmt=fmt)
                 elif fmt == "tdd":
                     #
+                    logger.info("Writing serialized mapping file %r", idMapPath)
+                    fU = FileUtil()
+                    fU.mkdirForFile(idMapPath)
                     colNameL = []
                     colNameL.append("UniProtId")
                     colNameL.extend(mapNameL)
-                    oL = []
-                    oL.append("\t".join(colNameL))
-
-                    iCount = 0
-                    if len(mapNameL) == 1:
-                        for row in ioU.deserializeCsvIter(idPath, delimiter="\t", rowFormat="list", encodingErrors="ignore"):
-                            oL.append(row[0] + "\t" + row[self.__mapRecordD[mapNameL[0]] - 1])
-                            iCount += 1
-                            if maxLimit and iCount > maxLimit:
-                                break
-                    else:
-                        for row in ioU.deserializeCsvIter(idPath, delimiter="\t", rowFormat="list", encodingErrors="ignore"):
-                            tL = [row[0]]
-                            for mapName in mapNameL:
-                                tL.append(str(row[self.__mapRecordD[mapName] - 1]))
-                            oL.append("\t".join(tL))
-                            iCount += 1
-                            if maxLimit and iCount > maxLimit:
-                                break
-                        #
-                    ok = mU.doExport(idMapPath, oL, fmt="list")
-                    oL = []
-                    nL, oD = self.__rebuildCache(targetUrl, mapNameL, outDirPath, fmt=fmt, useCache=True, maxLimit=maxLimit)
+                    with open(idMapPath, "w") as ofh:
+                        ofh.write("%s\n" % "\t".join(colNameL))
+                        if len(mapNameL) == 1:
+                            idx = self.__mapRecordD[mapNameL[0]] - 1
+                            for row in ioU.deserializeCsvIter(idPath, delimiter="\t", rowFormat="list", encodingErrors="ignore"):
+                                ofh.write("%s\t%s\n" % (row[0], row[idx]))
+                        else:
+                            idxL = [0]
+                            idxL.extend([self.__mapRecordD[mapName] - 1 for mapName in mapNameL])
+                            for row in ioU.deserializeCsvIter(idPath, delimiter="\t", rowFormat="list", encodingErrors="ignore"):
+                                ofh.write("%s\n" % "\t".join([str(row[idx]) for idx in idxL]))
+                            #
+                    nL, oD = self.__rebuildCache(targetUrl, mapNameL, outDirPath, rawDirPath, fmt=fmt, useCache=True)
+                    ok = True if nL and oD else False
             logger.info("Completed reload (%r) at %s (%.4f seconds)", ok, time.strftime("%Y %m %d %H:%M:%S", time.localtime()), time.time() - startTime)
         except Exception as e:
             logger.exception("Failing with %s", str(e))
         #
         return nL, oD
+
+    def restore(self, cfgOb, configName):
+        ok = False
+        try:
+            startTime = time.time()
+            url = cfgOb.get("STASH_SERVER_URL", sectionName=configName)
+            userName = cfgOb.get("_STASH_AUTH_USERNAME", sectionName=configName)
+            password = cfgOb.get("_STASH_AUTH_PASSWORD", sectionName=configName)
+            basePath = cfgOb.get("_STASH_SERVER_BASE_PATH", sectionName=configName)
+            ok = self.__fromStash(url, basePath, userName=userName, password=password)
+            logger.info("Recovered UniProt Mapping file from stash (%r)", ok)
+            if not ok:
+                urlFallBack = cfgOb.get("STASH_SERVER_FALLBACK_URL", sectionName=configName)
+                ok = self.__fromStash(urlFallBack, basePath, userName=userName, password=password)
+                logger.info("Recovered UniProt Mapping file from fallback stash (%r)", ok)
+            #
+            logger.info("Completed recovery (%r) at %s (%.4f seconds)", ok, time.strftime("%Y %m %d %H:%M:%S", time.localtime()), time.time() - startTime)
+        except Exception as e:
+            logger.exception("Failing with %s", str(e))
+        #
+        return ok
+
+    def backup(self, cfgOb, configName):
+        ok1 = ok2 = False
+        try:
+            startTime = time.time()
+            userName = cfgOb.get("_STASH_AUTH_USERNAME", sectionName=configName)
+            password = cfgOb.get("_STASH_AUTH_PASSWORD", sectionName=configName)
+            basePath = cfgOb.get("_STASH_SERVER_BASE_PATH", sectionName=configName)
+            url = cfgOb.get("STASH_SERVER_URL", sectionName=configName)
+            urlFallBack = cfgOb.get("STASH_SERVER_FALLBACK_URL", sectionName=configName)
+            ok1 = self.__toStash(url, basePath, userName=userName, password=password)
+            ok2 = self.__toStash(urlFallBack, basePath, userName=userName, password=password)
+            logger.info("Completed backup (%r/%r) at %s (%.4f seconds)", ok1, ok2, time.strftime("%Y %m %d %H:%M:%S", time.localtime()), time.time() - startTime)
+        except Exception as e:
+            logger.exception("Failing with %s", str(e))
+        return ok1 & ok2
+
+    def __toStash(self, url, stashRemoteDirPath, userName=None, password=None, remoteStashPrefix=None):
+        """Copy tar and gzipped bundled cache data to remote server/location.
+
+        Args:
+            url (str): server URL (e.g. sftp://hostname.domain) None for local host
+            stashRemoteDirPath (str): path to target directory on remote server
+            userName (str, optional): server username. Defaults to None.
+            password (str, optional): server password. Defaults to None.
+            remoteStashPrefix (str, optional): channel prefix. Defaults to None.
+
+        Returns:
+            (bool): True for success or False otherwise
+        """
+        ok = False
+        try:
+            stU = StashUtil(os.path.join(self.__cachePath, "stash"), self.__dirName)
+            ok = stU.makeBundle(self.__cachePath, [self.__dirName])
+            if ok:
+                ok = stU.storeBundle(url, stashRemoteDirPath, remoteStashPrefix=remoteStashPrefix, userName=userName, password=password)
+        except Exception as e:
+            logger.error("Failing with url %r stashDirPath %r: %s", url, stashRemoteDirPath, str(e))
+        return ok
+
+    def __fromStash(self, url, stashRemoteDirPath, userName=None, password=None, remoteStashPrefix=None):
+        """Restore local cache from a tar and gzipped bundle to fetched from a remote server/location.
+
+        Args:
+            url (str): server URL (e.g. sftp://hostname.domain) None for local host
+            stashRemoteDirPath (str): path to target directory on remote server
+            userName (str, optional): server username. Defaults to None.
+            password (str, optional): server password. Defaults to None.
+            remoteStashPrefix (str, optional): channel prefix. Defaults to None.
+
+        Returns:
+            (bool): True for success or False otherwise
+        """
+        ok = False
+        try:
+            stU = StashUtil(os.path.join(self.__cachePath, "stash"), self.__dirName)
+            ok = stU.fetchBundle(self.__cachePath, url, stashRemoteDirPath, remoteStashPrefix=remoteStashPrefix, userName=userName, password=password)
+        except Exception as e:
+            logger.error("Failing with url %r stashDirPath %r: %s", url, stashRemoteDirPath, str(e))
+        return ok
